--- a/development/index.html
+++ b/development/index.html
@@ -1,7 +1,7 @@
 @@include('./header.html')  
 
 <!-- Page Content -->
-<div class="container-fluid first-row photo-bg" style="background-image: url(../img/30sportScope/DSC_0127.JPG)">
+<div class="container-fluid first-row photo-bg" style="background-image: url(./img/30sportScope/DSC_0127.JPG)">
 
 
 
@@ -34,8 +34,8 @@
                             <li>HD Camera and 9" Monitor</li>
                             <li>Choice of Tower Color</li>
                         </ul>
-                        <a href="#" type="button" class="btn btn-xs btn-features">Made in the USA</a>
-                        <a href="#" type="button" class="btn btn-xs btn-features">Hudl ready</a>
+                        <a href="#" type="button" class="btn btn-sm btn-features">Made in the USA</a>
+                        <a href="#" type="button" class="btn btn-sm btn-features">Hudl ready</a>
                     </div>
                     <div class="col-md-6 center">
                         <h3 class="offer">$300 off</h3><h4 class="offer"> your 30' endzone camera order!</h4>
