--- a/development/sport-scope-30.html
+++ b/development/sport-scope-30.html
@@ -6,7 +6,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <ol class="breadcrumb">
                 <li><a href="index.html">Home</a>
                 </li>
@@ -15,10 +15,14 @@
             </ol>
         </div>
     </div>
-    <!-- /.row -->
+</div>
+<!-- /.row -->
 
-    <!-- Portfolio Item Row -->
+<!-- Portfolio Item Row -->
+
+<div class="container-fluid ">
     <section>
+
         <div class="row">
 
             <div class="col-md-6">
@@ -27,21 +31,21 @@
 
             <div class="col-md-6">
                 <div class="row title">
-                    <div class="col-lg-9">
+                    <div class="col-md-9">
                         <h1>Sport Scope
                             <small> 30'</small>
                         </h1>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-md-3">
                         <button type="button" class="btn btn-primary btn-lg btn-order">Order Now</button>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-md-12">
                         <p>The Sport Scope is easy to transport, quick to set-up, and of all the end zone cameras on the market, is the only one that comes standard with everything you need to film right out of the box. You won't find a more important piece of equipment that will enhance how you film your team and what you see on the field. Check out our instructional video to see for yourself.</p>
 
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-md-6">
                                 <ul>
                                     <li>Automatic Camera Controls</li>
                                     <li>30 ft. Extended Height</li>
@@ -52,7 +56,7 @@
                                     <li>Choice of Tower Color</li>
                                 </ul>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-md-6">
                                 <h2>$4,199</h2>
                                 <h6>Offer Through March 31, 2016</h6>
                                 <p>Ships within 48 hours</p>
@@ -64,20 +68,22 @@
             </div>
         </div>
     </section>
-</div>
+        </div>
+
+
 
 <!-- Included Items -->
+    <div class="container-fluid photo-bg" style="background-image: url(./img/30sportScope/DSC_0068.JPG)">
 <section>    
-    <div class="container-fluid photo-bg" style="background-image: url(../img/30sportScope/DSC_0068.JPG)">
 
 
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
                 <h3 class="section-header light">Includes</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-md-4">
 
                 <div class="panel-group" id="accordion">
                     <div class="panel panel-default">
@@ -116,7 +122,7 @@
                         </div>
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body">
-                                The Sony camera remote allows the user to zoom in and out as they record with their endzone camera. You can also turn on / off the camcorder with this remote, which means you can conserve battery during halftime, between quarters, etc. The user can also put the camcorder in record or standby mode, allowing for the operator to only record the plays they want. This allows for smaller, more precise clips of only the action in the plays, which cuts down on transfer and analysis time. 
+                                The Sony camera remote allows the user to zoom in and out as they record with their endzone camera. You can also turn on/off the camcorder with this remote, which means you can conserve battery during halftime, between quarters, etc. The user can also put the camcorder in record or standby mode, allowing for the operator to only record the plays they want. This allows for smaller, more precise clips of only the action in the plays, which cuts down on transfer and analysis time. 
                             </div>
                         </div>
                     </div>
@@ -149,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <div class="panel-group" id="accordion">
                     <!-- /.panel -->
                     <div class="panel panel-default">
@@ -186,11 +192,11 @@
                         </div>
                         <div id="collapseEight" class="panel-collapse collapse">
                             <div class="panel-body">
-                               The Sport Scope comes with a lens hood and rain cover that protects both the camcorder and the pan/tilt head for both the Sport Scope 30' and 25' from harsh weather. The lens hood screws on the front of the camcorder and the 100% waterproof cover protects the camcorder and pan/tilt head.                           </div>
-                           </div>
-                       </div>
-                       <!-- /.panel -->
-                       <div class="panel panel-default">
+                             The Sport Scope comes with a lens hood and rain cover that protects both the camcorder and the pan/tilt head for both the Sport Scope 30' and 25' from harsh weather. The lens hood screws on the front of the camcorder and the 100% waterproof cover protects the camcorder and pan/tilt head.                           </div>
+                         </div>
+                     </div>
+                     <!-- /.panel -->
+                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">Level</a>
@@ -218,7 +224,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <div class="panel-group" id="accordion">
                     <!-- /.panel -->
                     <div class="panel panel-default">
@@ -276,31 +282,32 @@
                 </div>
             </div>
         </div>
+</section>
+
     </div>
 
-</section>
 
 
 <!-- /.row -->
 
 
 <!-- Related Projects Row -->
-<div class="container-fluid">
+<div class="container-fluid ">
     <section>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
                 <h3 class="section-header">Sport Scope in Action</h3>
             </div>
         </div>
         <div class="row">
 
 
-            <div class="col-sm-3 col-xs-6 col-lg-4">    
+            <div class="col-sm-6 col-xs-12 col-md-4">    
 
                 <iframe src="https://www.youtube.com/embed/pR252kS8QPc" frameborder="0" allowfullscreen></iframe>
             </div>
 
-            <div class="col-sm-3 col-xs-6 col-lg-4">
+            <div class="col-sm-6 col-xs-12 col-md-4">
 
                 <iframe src="https://www.youtube.com/embed/rD7Jx-MB0h4" frameborder="0" allowfullscreen></iframe>
 
