--- a/development/about.html
+++ b/development/about.html
@@ -1,41 +1,55 @@
 @@include('./header.html')
-    <!-- Page Content -->
-    <div class="container">
+<!-- Page Content -->
+<div class="container-fluid first-row">
 
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row first-row">
+    <!-- Page Heading/Breadcrumbs -->
+
+    <!-- /.row -->
+
+    <!-- Portfolio Item Row -->
+    <section>
+
+        <div class="row title">
             <div class="col-lg-12">
-                <h1 class="page-header">About Sport Scope
-                    <small></small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">About</li>
-                </ol>
+                <h1 class="right">About Sport Scope</h1>
             </div>
         </div>
+
         <!-- /.row -->
 
         <!-- Intro Content -->
-        <div class="row">
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-            </div>
-            <div class="col-md-6">
-                <h2 class="title">Our History</h2>
-                <p>The original Sport Scope Endzone Camera was created for a local high school team after they could not afford the systems that were currently on the market. The owner of Sport Scope, with his entrepreneur nature, decided to create a new business selling high quality, but more affordable end zone camera systems. After having one of his best engineers from his primary business, Berg Companies, design and prototype an endzone camera, he decided to launch the business in 2011.</p>
+        <section>    
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </div>
+                <div class="col-md-6">
+                    <h2 class="section-header">Our History</h2>
+                    <p>The original Sport Scope Endzone Camera was created for a local high school team after they could not afford the systems that were currently on the market. The owner of Sport Scope, with his entrepreneur nature, decided to create a new business selling high quality, but more affordable end zone camera systems. After having one of his best engineers from his primary business, Berg Companies, design and prototype an endzone camera, he decided to launch the business in 2011.</p>
 
-<p>Our mission from the beginning was to provide sports programs of all sizes a quality, easy to use, and affordable end zone camera systems. We started by looking at all of our competitors and determined that their prices were too high, that their systems were too complex, and that their end zone camera packages were missing vital components. We set out to change the industry standards by offering the complete endzone camera package that is extremely easy to set up and use for an affordable price. We have always considered the customer and operator as the driving force behind everything we have done and will do.</p>
- </p>
+                    <p>Our mission from the beginning was to provide sports programs of all sizes a quality, easy to use, and affordable end zone camera systems. We started by looking at all of our competitors and determined that their prices were too high, that their systems were too complex, and that their end zone camera packages were missing vital components. We set out to change the industry standards by offering the complete endzone camera package that is extremely easy to set up and use for an affordable price. We have always considered the customer and operator as the driving force behind everything we have done and will do.</p>
+                    
+                </div>
             </div>
-        </div>
+        </section>
         <!-- /.row -->
 
+        <section>
+            <div class="row">
+                <div class="col-md-6">
+                    <h2 class="section-header">Community Involvement</h2>
+                    <p>The original Sport Scope Endzone Camera was created for a local high school team after they could not afford the systems that were currently on the market. The owner of Sport Scope, with his entrepreneur nature, decided to create a new business selling high quality, but more affordable end zone camera systems. After having one of his best engineers from his primary business, Berg Companies, design and prototype an endzone camera, he decided to launch the business in 2011.</p>
 
-        
+                    <p>Our mission from the beginning was to provide sports programs of all sizes a quality, easy to use, and affordable end zone camera systems. We started by looking at all of our competitors and determined that their prices were too high, that their systems were too complex, and that their end zone camera packages were missing vital components. We set out to change the industry standards by offering the complete endzone camera package that is extremely easy to set up and use for an affordable price. We have always considered the customer and operator as the driving force behind everything we have done and will do.</p>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                </div>
+            </div>
+        </section>
+
 
         <hr>
 
-@@include('./footer.html')
+        @@include('./footer.html')
 
