--- a/development/header.html
+++ b/development/header.html
@@ -13,7 +13,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700|Open+Sans:300,600' rel='stylesheet' type='text/css'>
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-fixed-top" role="navigation">
-            <div class="container">
+            <div class="container-fluid">
 
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -130,7 +130,7 @@
                             <a href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="services.html">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
