--- a/development/index.html
+++ b/development/index.html
@@ -1,117 +1,117 @@
-@@include('./header.html')  
+@@include('./header.html') 
 
 <!-- Page Content -->
 <div class="container-fluid first-row photo-bg" style="background-image: url(./img/30sportScope/DSC_0127.JPG)">
 
 
 
-    <!-- Marketing Icons Section -->
-    <div class="row">
-        <div class="col-lg-9">
-            <h1 class="picture-text">Rise above the competition.</h1>
+  <!-- Marketing Icons Section -->
+  <div class="row">
+    <div class="col-md-9">
+      <h1 class="picture-text">Rise above the competition.</h1>
+    </div>
+    <a href="#">
+      <div class="col-md-3 edge-ad">
+        <img src="./img/edge.svg" alt="Edge Replay">
+        <h4>Realtime replay in seconds.</h4>
+      </div>
+    </a>
+  </div> 
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-default panel-home">
+        <div class="panel-heading product">
+          <h2>Sport Scope 30'</h2>
         </div>
-        <a href="#">
-            <div class="col-lg-3 edge-ad">
-                <img src="./img/edge.svg" alt="Edge Replay">
-                <h4>Realtime replay in seconds.</h4>
-            </div>
-        </a>
-    </div> 
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="panel panel-default panel-home">
-                <div class="panel-heading product">
-                    <h2>Sport Scope 30'</h2>
-                </div>
-                <div class="panel-body">
-                    <div class="col-md-6">
-                        <ul class="featured-list">
-                            <li>Automatic Camera Controls</li>
-                            <li>30 ft. Extended Height</li>
-                            <li>10 yr. Frame Warranty</li>
-                            <li>Easy Set-up and Operation</li>
-                            <li>Everything Included</li>
-                            <li>HD Camera and 9" Monitor</li>
-                            <li>Choice of Tower Color</li>
-                        </ul>
-                        <a href="#" type="button" class="btn btn-sm btn-features">Made in the USA</a>
-                        <a href="#" type="button" class="btn btn-sm btn-features">Hudl ready</a>
-                    </div>
-                    <div class="col-md-6 center">
-                        <h3 class="offer">$300 off</h3><h4 class="offer"> your 30' endzone camera order!</h4>
-                        <h2>$4,199</h2>
-                        <h6>(Offer through March 31, 2016)</h6>
-                        <a href="./sport-scope-30.html" class="btn btn-default">Learn More</a>
+        <div class="panel-body">
+          <div class="col-md-6">
+            <ul class="featured-list">
+              <li>Automatic Camera Controls</li>
+              <li>30 ft. Extended Height</li>
+              <li>10 yr. Frame Warranty</li>
+              <li>Easy Set-up and Operation</li>
+              <li>Everything Included</li>
+              <li>HD Camera and 9" Monitor</li>
+              <li>Choice of Tower Color</li>
+            </ul>
+            <a href="#" type="button" class="btn btn-sm btn-features">Made in the USA</a>
+            <a href="#" type="button" class="btn btn-sm btn-features">Hudl ready</a>
+          </div>
+          <div class="col-md-6 center">
+            <h3 class="offer">$300 off</h3><h4 class="offer"> your 30' endzone camera order!</h4>
+            <h2>$4,199</h2>
+            <h6>(Offer through March 31, 2016)</h6>
+            <a href="./sport-scope-30.html" class="btn btn-default">Learn More</a>
 
-                    </div>
+          </div>
 
-                </div>
-            </div>
         </div>
+      </div>
     </div>
-    <div class="col-lg-6"></div>
+  </div>
+  <div class="col-md-6"></div>
 
-<!-- /.row -->
+  <!-- /.row -->
 
-   <!-- Portfolio Section
-   <div class="row">
-    <div class="col-lg-12">
-        <h2 class="page-header">Portfolio Heading</h2>
-    </div>
-    <div class="col-md-4 col-sm-6">
-        <a href="portfolio-item.html">
-            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6">
-        <a href="portfolio-item.html">
-            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6">
-        <a href="portfolio-item.html">
-            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6">
-        <a href="portfolio-item.html">
-            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6">
-        <a href="portfolio-item.html">
-            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-        </a>
-    </div>
-    <div class="col-md-4 col-sm-6">
-        <a href="portfolio-item.html">
-            <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-        </a>
-    </div>
+  <!-- Portfolio Section
+  <div class="row">
+  <div class="col-md-12">
+    <h2 class="page-header">Portfolio Heading</h2>
+  </div>
+  <div class="col-md-4 col-sm-6">
+    <a href="portfolio-item.html">
+      <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+    </a>
+  </div>
+  <div class="col-md-4 col-sm-6">
+    <a href="portfolio-item.html">
+      <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+    </a>
+  </div>
+  <div class="col-md-4 col-sm-6">
+    <a href="portfolio-item.html">
+      <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+    </a>
+  </div>
+  <div class="col-md-4 col-sm-6">
+    <a href="portfolio-item.html">
+      <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+    </a>
+  </div>
+  <div class="col-md-4 col-sm-6">
+    <a href="portfolio-item.html">
+      <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+    </a>
+  </div>
+  <div class="col-md-4 col-sm-6">
+    <a href="portfolio-item.html">
+      <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+    </a>
+  </div>
 </div>
 /.row -->
 
 <!-- Features Section
 <div class="row">
-    <div class="col-lg-12">
-        <h2 class="page-header">Modern Business Features</h2>
-    </div>
-    <div class="col-md-6">
-        <p>The Modern Business template by Start Bootstrap includes:</p>
-        <ul>
-            <li><strong>Bootstrap v3.2.0</strong>
-            </li>
-            <li>jQuery v1.11.0</li>
-            <li>Font Awesome v4.1.0</li>
-            <li>Working PHP contact form with validation</li>
-            <li>Unstyled page elements for easy customization</li>
-            <li>17 HTML pages</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-    </div>
-    <div class="col-md-6">
-        <img class="img-responsive" src="http://placehold.it/700x450" alt="">
-    </div>
+  <div class="col-md-12">
+    <h2 class="page-header">Modern Business Features</h2>
+  </div>
+  <div class="col-md-6">
+    <p>The Modern Business template by Start Bootstrap includes:</p>
+    <ul>
+      <li><strong>Bootstrap v3.2.0</strong>
+      </li>
+      <li>jQuery v1.11.0</li>
+      <li>Font Awesome v4.1.0</li>
+      <li>Working PHP contact form with validation</li>
+      <li>Unstyled page elements for easy customization</li>
+      <li>17 HTML pages</li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+  </div>
+  <div class="col-md-6">
+    <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+  </div>
 </div>
 /.row -->
 
@@ -119,17 +119,17 @@
 
 <!-- Call to Action Section
 <div class="well">
-    <div class="row">
-        <div class="col-md-8">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-        </div>
-        <div class="col-md-4">
-            <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
-        </div>
+  <div class="row">
+    <div class="col-md-8">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
     </div>
+    <div class="col-md-4">
+      <a class="btn btn-md btn-default btn-block" href="#">Call to Action</a>
+    </div>
+  </div>
 </div>
 -->
 </div>
 <hr>
-@@include('./footer.html')  
+@@include('./footer.html') 
 
