--- a/footer.html
+++ b/footer.html
@@ -1,50 +1,49 @@
-        <!-- Footer -->
-        <div class="container">
-        <footer>
+  <!-- Footer -->
+  <div class="container">
+    <footer>
 
-              
-            <div class="row">
-                <div class="col-lg-3">
-                    <p><a href="">Privacy Policy</a></p>
 
-                </div>
-                <div class="col-lg-3">
-                    <p>Toll Free <a href="tel:18883357875">1-888-335-7875</a></p>
-                </div>
-                <div class="col-lg-3">
-                    <p><a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a></p>
-                </div>
-                <div class="col-lg-1"></div>
-                <div class="col-lg-2">
-                    <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                <small class="center">
-                    <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
-                </small>
-                </div>
-            </div>
-        </footer>
-    </div>
+      <div class="row">
+        <div class="col-md-3">
+          <p><a href="">Privacy Policy</a></p>
 
-    </div>
-    <!-- /.container -->
+        </div>
+        <div class="col-md-3">
+          <p>Toll Free <a href="tel:18883357875">1-888-335-7875</a></p>
+        </div>
+        <div class="col-md-3">
+          <p><a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a></p>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-2">
+          <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <small class="center">
+            <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
+          </small>
+        </div>
+      </div>
+    </footer>
+  </div>
+  <!-- end footer -->
+<!-- /.container -->
+</div>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+  <!-- jQuery -->
+  <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
+  <!-- Script to Activate the Carousel -->
+  <script>
+  $('.carousel').carousel({
+  interval: 5000 //changes the speed
+  })
+  </script>
 
 </body>
-
 </html>
