this is a big project.

--- a/development/header.html
+++ b/development/header.html
@@ -52,7 +52,7 @@
         <ul class="nav navbar-nav navbar-right">
           
           <div class="row social">
-            <div class="col-lg-12">
+            <div class="col-md-12">
               <ul>
                 <li><a href="" target="blank" class="fa fa-facebook" alt="facebook"></a></li>
                 <li><a href="" target="blank" class="fa fa-twitter" alt="twitter"></a></li>
@@ -62,7 +62,7 @@
                 <li><a href="" class="fa fa-shopping-cart"></a></li>
               </ul>
             </div>
-          </div> 
+          </div>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Endzone Cameras <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -119,7 +119,7 @@
                 <a href="about.html">Sports</a>
               </li>
               <li>
-                <a href="blog-post.html">Testimonials</a>
+                <a href="testimonials.html">Testimonials</a>
               </li>
               <li>
                 <a href="blog-home-2.html">Comparison</a>
