--- a/development/sport-scope-25.html
+++ b/development/sport-scope-25.html
@@ -20,7 +20,7 @@
 
 <!-- Portfolio Item Row -->
 
-<div class="container-fluid ">
+<div class="container-fluid">
   <section>
 
     <div class="row">
@@ -77,7 +77,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="section-header light">Includes</h3>
+        <h3 class="section-header light-text">Includes</h3>
       </div>
     </div>
     <div class="row">
