--- a/development/quick-scope-11.html
+++ b/development/quick-scope-11.html
@@ -77,7 +77,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="section-header light">Includes</h3>
+        <h3 class="section-header light-text">Includes</h3>
       </div>
     </div>
     <div class="row">
