--- a/development/header.html
+++ b/development/header.html
@@ -116,7 +116,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">In Action <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li>
-                <a href="about.html">Sports</a>
+                <a href="sports.html">Sports</a>
               </li>
               <li>
                 <a href="testimonials.html">Testimonials</a>
