--- a/development/header.html
+++ b/development/header.html
@@ -122,7 +122,7 @@
                 <a href="testimonials.html">Testimonials</a>
               </li>
               <li>
-                <a href="blog-home-2.html">Comparison</a>
+                <a href="comparison.html">Comparison</a>
               </li>
             </ul>
           </li>
