--- a/development/comparison.html
+++ b/development/comparison.html
@@ -13,19 +13,299 @@
 		</div>
 		<div class="col-md-12">
 		<div class="table-responsive">
-			<table class="table table-hover table-condensed table-bordered">
+			<table class="table table-hover table-condensed table-bordered table-compare">
 				<thead>
 					<tr>
-						<th></th>
+						<th>Company</th>
 						<th class="sport-scope">Sport Scope</th>
-						<th rowspan="2">Hi-Pod</th>
+						<th colspan="2">Hi-Pod</th>
 						<th>Endzone Video Systems</th>
-						<th rowspan="2">US Sports Video</th>
+						<th colspan="2">US Sports Video</th>
 						<th>Endzone Camera</th>
 						<th>Above the Field</th>
 					</tr>
 				</thead>
+				<tbody>
+					<tr>
+						<th>Category</th>
+						<th>Sport Scope 30'</th>
+						<th>X7</th>
+						<th>R Line</th>
+						<th>EVS25</th>
+						<th>Raven</th>
+						<th>Sky Hawk</th>
+						<th>25' Endzone</th>
+						<th>All Sports HD</th>
+					</tr>
+					<tr>
+						<td>Camera Pan Tilt Type</td>
+						<td>Custom-Auto</td>
+						<td>Manual</td>
+						<td>Automatic</td>
+						<td>Manual</td>
+						<td>Manual</td>
+						<td>Automatic</td>
+						<td>Automatic</td>
+						<td>Automatic</td>
+					</tr>
+					<tr>
+						<td>Pan Tilt Control Type</td>
+						<td>Custom Joystick</td>
+						<td>Manual</td>
+						<td>D-Pad</td>
+						<td>Manual</td>
+						<td>Manual</td>
+						<td>Joystick</td>
+						<td>D-Pad</td>
+						<td>NA</td>
+					</tr>
+					<tr>
+						<td>Extended Height</td>
+						<td>30'</td>
+						<td>31'</td>
+						<td>31'</td>
+						<td>25'</td>
+						<td>25'</td>
+						<td>25'</td>
+						<td>25'</td>
+						<td>23'</td>
+					</tr>
+					<tr>
+						<td>Ease of Setup</td>
+						<td>High</td>
+						<td>Low</td>
+						<td>Medium</td>
+						<td>Medium</td>
+						<td>High</td>
+						<td>Low</td>
+						<td>High</td>
+						<td>High</td>
+					</tr>
+					<tr>
+						<td>Ease of Use</td>
+						<td>High</td>
+						<td>Medium</td>
+						<td>High</td>
+						<td>Medium</td>
+						<td>Medium</td>
+						<td>NA</td>
+						<td>Medium</td>
+						<td>Medium</td>
+					</tr>
+					<tr>
+						<td>Raising Poles</td>
+						<td>Manual</td>
+						<td>Manual</td>
+						<td>Manual</td>
+						<td>Winch</td>
+						<td>Manual</td>
+						<td>Manual</td>
+						<td>Manual</td>
+						<td>Manual</td>
+					</tr>
+					<tr>
+						<td>Tower Warranty</td>
+						<td>10 yr</td>
+						<td>5 yr</td>
+						<td>5 yr</td>
+						<td>7 yr</td>
+						<td>NA</td>
+						<td>NA</td>
+						<td>1 yr</td>
+						<td>Manufacturer</td>
+					</tr>
+					<tr>
+						<td>Made in USA</td>
+						<td class="check-yes">Yes</td>
+						<td class="no">No</td>
+						<td class="no">No</td>
+						<td class="check-yes">Yes</td>
+						<td class="check-yes">Yes</td>
+						<td class="check-yes">Yes</td>
+						<td class="check-yes">Yes</td>
+						<td class="check-yes">Yes</td>
+					</tr>
+					<tr>
+						<td>Number of Legs</td>
+						<td>4</td>
+						<td>3</td>
+						<td>3</td>
+						<td>3</td>
+						<td>3</td>
+						<td>3</td>
+						<td>3</td>
+						<td>3</td>
+					</tr>
+					<tr>
+						<td>School Color</td>
+						<td class="check-yes">Included</td>
+						<td class="no">Unavailable</td>
+						<td class="no">Unavailable</td>
+						<td class="no">Unavailable</td>
+						<td class="no">Unavailable</td>
+						<td class="no">Unavailable</td>
+						<td class="no">Unavailable</td>
+						<td>$300 extra</td>
+					</tr>
+					<tr>
+						<td>Sit while Filming</td>
+						<td class="check-yes">Yes</td>
+						<td class="no">No</td>
+						<td class="check-yes">Yes</td>
+						<td class="no">No</td>
+						<td class="check-yes">Yes</td>
+						<td class="check-yes">Yes</td>
+						<td>NA</td>
+						<td class="check-yes">Yes</td>
+					</tr>
+					<tr>
+						<td>Complete System</td>
+						<td class="check-yes">Yes</td>
+						<td class="no">No</td>
+						<td class="no">No</td>
+						<td class="no">No</td>
+						<td class="no">No</td>
+						<td class="no">No</td>
+						<td class="no">No</td>
+						<td class="no">No</td>
+					</tr>
+
+					<tr>
+						<td class="indent">9" Monitor</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+					</tr>
+					<tr>
+						<td class="indent">HD Camcorder</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+					</tr>
+					<tr>
+						<td class="indent">Rain Gear</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td>For Camera Only</td>
+						<td>For Camera Only</td>
+						<td>For Camera Only</td>
+					</tr>
+					<tr>
+						<td class="indent">Travel Bag</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="check-yes">&#10003;</td>
+					</tr>
+					<tr>
+						<td class="indent">Electronics Case</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+					</tr>
+					<tr>
+						<td class="indent">Extended Memory</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+					</tr>
+					<tr>
+						<td class="indent">Extended Camera Battery</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td>NA</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+					</tr>
+					<tr>
+						<td class="indent">Level</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+					</tr>
+					<tr>
+						<td class="indent">Memory Card Reader</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+					</tr>
+					<tr>
+						<td class="indent">Sports Chair</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+					</tr>
+					<tr>
+						<td class="indent">Wheels/Mobility</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="check-yes">&#10003;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+						<td class="no">&#10005;</td>
+					</tr>
+					<tr>
+						<th>Price</th>
+						<th>$4,499</th>
+						<th>$5,399</th>
+						<th>$4,400</th>
+						<th>$4,965</th>
+						<th>$6,400</th>
+						<th>$9,500</th>
+						<th>$4,800</th>
+						<th>$4,795</th>
+					</tr>					
+				</tbody>
 			</table>
+
+		<p>Other end zone cameras like the Hi-Pod, Endzone Video Systems, US Sports Video, &amp; EndzoneCamera.com have expensive manual pan/tilt systems and even more expensive automatic systems. Sport Scope has found a way to provide coaches with a high quality, east to use, and affordable end zone camera systems that focuses on providing coaches and camera operators with the best game film and experience possible. Please contact us for more information at <a href="tel:18883357875">1-888-335-7875</a> or email us at <a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a>.</p>
 		</div>
 		</div>
 	</div>
